--- a/views/BackEnd.pug
+++ b/views/BackEnd.pug
@@ -42,3 +42,11 @@ htlm
             h2 Avis des utilisateurs sur le backend
           .flip-box-back
             h2 Suite
+  .wrapper
+    each res in result
+      .box 
+        .card
+          h1 #{res.fname} #{res.lname}
+          p.title &quot; #{res.avis}. &quot;
+          p Note : #{res.note}/5
+          p.bg-dark #{res.formation}
