--- a/views/Home.pug
+++ b/views/Home.pug
@@ -2,6 +2,7 @@ htlm
   head
     title  D- CLIC  
     link(rel='stylesheet' href='style.css')
+    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet' integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN' crossorigin='anonymous')
   .container
     .menu
       ul
@@ -38,9 +39,12 @@ htlm
           .play-btn-inner
       .app-picture-index
         img(src='./image/photo.jpg')
-      .flip-box
-        .flip-box-inner
-          .flip-box-front
-            h2 Les meilleures notes des formations
-          .flip-box-back
-            h2 Suite
+      h1.comms COMMENTAIRES 
+.wrapper
+  each res in result
+    .box 
+      .card
+        h1 #{res.fname} #{res.lname}
+        p.title &quot; #{res.avis}. &quot;
+        p Note : #{res.note}/5
+        p.bg-dark #{res.formation}
