--- a/views/UX-UI.pug
+++ b/views/UX-UI.pug
@@ -40,3 +40,11 @@ htlm
             h2 Avis des utilisateurs le uxui
           .flip-box-back
             h2 Suite
+  .wrapper
+    each res in result
+      .box 
+        .card
+          h1 #{res.fname} #{res.lname}
+          p.title &quot; #{res.avis}. &quot;
+          p Note : #{res.note}/5
+          p.bg-dark #{res.formation}
