--- a/views/Contact.pug
+++ b/views/Contact.pug
@@ -49,3 +49,4 @@ htlm
             option(value='Marketing') Marketing
             option(value='UX-UI') UX-UI
           input#btn(type='submit' value='Submit')
+script(src='/script/script.js')
