--- a/views/Contact.pug
+++ b/views/Contact.pug
@@ -48,5 +48,4 @@ htlm
             option(value='Backend') Backend
             option(value='Marketing') Marketing
             option(value='UX-UI') UX-UI
-          input#btn(type='submit' value='Submit')
-script(src='/script/script.js')
+          input#btn(type='submit' name='btn' value='Submit')
