--- a/views/FrontEnd.pug
+++ b/views/FrontEnd.pug
@@ -35,10 +35,11 @@ htlm
       .app-picture-frontend
         img(src='./image/image_frontend.jpg')
   .wrapper
-    each res in result
-      .box 
-        .card
-          h1 #{res.fname} #{res.lname}
-          p.title &quot; #{res.avis}. &quot;
-          p Note : #{res.note}/5
-          p.bg-dark #{res.formation}        
+    if (result)
+      each res in result
+        .box 
+          .card
+            h1 #{res.fname} #{res.lname}
+            p.title &quot; #{res.avis}. &quot;
+            p Note : #{res.note}/5
+            p.bg-dark #{res.formation}        
