--- a/views/MarketingDigital.pug
+++ b/views/MarketingDigital.pug
@@ -42,10 +42,11 @@ html
         .app-picture-marketing
           img(src='./image/image_marketing.jpg')
     .wrapper
-      each res in result
-        .box 
-          .card
-            h1 #{res.fname} #{res.lname}
-            p.title &quot; #{res.avis}. &quot;
-            p Note : #{res.note}/5
-            p.bg-dark #{res.formation}
+      if (result)
+        each res in result
+          .box 
+            .card
+              h1 #{res.fname} #{res.lname}
+              p.title &quot; #{res.avis}. &quot;
+              p Note : #{res.note}/5
+              p.bg-dark #{res.formation}
